ingress-js/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: http
                http_filters:
                  - name: static
                    config:
                      path: /usr/share/envoy/html
                  - name: envoy.router
                    config: {}
                route_config:
                  name: route
                  virtual_hosts:
                    name: service
                    domains:
                      - '*'
                    routes:
                      - match:
                          prefix: /traffic
                        route:
                          cluster: ingresses
  clusters:
    - name: ingresses
      connect_timeout: 0.25s
      type: STATIC
      load_assignment:
        cluster_name: ingresses
        endpoints:
          lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.7
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.6
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.8
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.5
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.4
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.7
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.6
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.8
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.5
                    port_value: 32202
            - endpoint:
                address:
                  socket_address:
                    address: 172.17.0.4
                    port_value: 32202
